# ai-cookbooks

./: .gitignore  README.md  pyproject.toml  requirements.txt
AutoGen/: OAI_CONFIG_LIST.json  test-autogen.ipynb
AutoGen/General-Case/: README.md  test-autogen.ipynb  tkinter-ui.py
ChatWithDatabase/: MariaDB-Agent.ipynb  README.md  SQL-Agent.ipynb
ChatWithPDFDocuments/: README.md  app.py  utils.py
LangChainGeneral/: BufferMemory.ipynb  README.md  Wikipedia-Agent.ipynb
LangGraph/: README.md  langGraph.ipynb
LoRA/: LoRA.ipynb  README.md
SBERTClassification/: EmbeddingModel+KNeighborModel.ipynb  README.md  SBERT+customLayers.ipynb  datasetEDA.ipynb
SBERTClassification/data/: test.csv
